--- a/css/sytle.css
+++ b/css/sytle.css
@@ -1,54 +1,3 @@
-/* *{
-    padding: 0;
-    margin: 0;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.main{
-    border: 2px solid black;
-    padding: 20px;
-    font-size: 12.5px;
-    height: 600px;
-    width: 428px;
-}
-
-.skills li {
-    display: inline-block;
-}
-
-th,td{
-    padding: 2px 10px 2px 10px;
-    text-align: left;
-}
-
-#photocol img{
-    width: 70px;
-    height: 90px;
-    padding-bottom: 50px;
-}
-
-h2{
-    text-align: center;
-    font-size: 28px;
-}
-h3{
-    font-size: 18px;
-}
-body{
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-}
-
-.h li{
-    padding: 5px;
-}
-
-table {
-    width: 100%;
-} */
-
-
 *{
     padding: 0;
     margin: 0;
@@ -57,23 +6,25 @@ table {
 }
 
 body{
-    background-color: rgb(238, 238, 238);
+    background-color: #F0EFEF;
 }
 .main{
-    margin-top: 20px;
+    margin: 50px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .head{
     width: 100%;
     text-align: center;
     background-color: white;
-    border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
+    border: 4px solid black;
+    margin-bottom: 30px;
+
 }
 
 .head h1{
@@ -87,7 +38,6 @@ body{
 
 .photo{
     background-color: white;
-    border: 1px solid black;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
@@ -99,7 +49,6 @@ body{
 }
 
 .personal_details{
-    border: 1px solid black;
     border-radius: 10px;
     margin: 10px;
     background-color: white;
@@ -107,17 +56,13 @@ body{
     width: 40%;
     height: 280px;
     padding: 10px;
+    margin-bottom: 30px;
 }
 
 .personal_details table{
     width: 100%;
     text-align: left;
-    padding-left: 40px;
-}
-
-
-.personal_details table tr:nth-child(2n-1){
-    background-color: rgb(255, 255, 255);
+    padding-left: 54px;
 }
 
 h2{
@@ -126,13 +71,13 @@ h2{
 }
 
 .education_details{
-    border: 1px solid black;
     background-color: white;
     width: 35%;
     height: 280px;
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
+    margin-bottom: 30px;
 }
 
 .education_details table{
@@ -141,4 +86,37 @@ h2{
     text-align: center;
     margin-left: 40px;
     border-collapse: collapse;
+    border-color: #c6c6c6;
 }
+
+.skills{
+    width: 100%;
+    height: 280px;
+    background-color: white;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+}
+.skills table{
+    padding: 10px;
+    width: 250px;
+    text-align: left;
+}
+
+.skill{
+    display: flex;
+}
+
+.top img{
+    height: 40px;
+    width: 40px;
+    padding: 2px;
+    padding-right: 10px;
+    padding-left: px;
+}
+
+.top{
+    display: flex;
+}
+
+
