--- a/css/sytle.css
+++ b/css/sytle.css
@@ -53,11 +53,11 @@ body{
     margin: 10px;
     background-color: white;
     width: 78%;
-    width: 40%;
+    width: 38%;
     height: 280px;
     padding: 10px;
     margin-bottom: 30px;
-    width: auto;
+    /* width: auto; */
 }
 
 .personal_details table{
@@ -134,8 +134,7 @@ h2{
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
-    margin-bottom: 30px;
-    width: 45%;
+    width: 40%;
     margin-bottom: 30px;
 
 }
@@ -155,6 +154,8 @@ h2{
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
+    margin-bottom: 30px;
+
 }
 
 
