--- a/css/sytle.css
+++ b/css/sytle.css
@@ -57,7 +57,6 @@ body{
     height: 280px;
     padding: 10px;
     margin-bottom: 30px;
-    /* width: auto; */
 }
 
 .personal_details table{
@@ -151,11 +150,11 @@ h2{
 .declaration{
     background-color: white;
     width: 100%;
+    height: auto;
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
     margin-bottom: 30px;
-
 }
 
 
