--- a/css/sytle.css
+++ b/css/sytle.css
@@ -125,6 +125,7 @@ h2{
 
 .top{
     display: flex;
+    align-items: center;
 }
 
 .experience{
@@ -213,8 +214,8 @@ h2{
         font-size: 15px;
     }
     .head{
-        border: 3px solid black;
-        margin: 0;
+        border: 2px solid black;
+        margin: 10px;
     }
     .photo{
         width: 100%;
@@ -235,6 +236,7 @@ h2{
         padding: 2px;
         padding-right: 10px;
         padding-left: 5px;
+        margin-bottom: 10px;
     }
 
     .personal_details table{
@@ -243,7 +245,7 @@ h2{
 
     .personal_details{
         width: 100%;
-        height: 150px;
+        height: 160px;
         margin: 10px;
     }
 
