--- a/css/sytle.css
+++ b/css/sytle.css
@@ -126,7 +126,7 @@ h2{
 .top{
     display: flex;
     align-items: center;
-    padding-bottom: 5px;
+    padding-bottom: px;
 }
 
 .experience{
@@ -161,7 +161,7 @@ h2{
 }
 
 
-@media only screen and (max-width: 1090px){
+@media only screen and (max-width: 1470px){
     .main{
         margin: 20px;
     }
@@ -204,7 +204,7 @@ h2{
     }
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 975px){
     *{
         font-size: 10px;
     }
@@ -224,7 +224,7 @@ h2{
         margin: 10px;
     }
     .photo img{
-        width: 30%;
+        width: 20%;
         border-radius: 10px;
         height: auto;
     }
