--- a/css/sytle.css
+++ b/css/sytle.css
@@ -13,6 +13,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: start;
 }
 
 .head{
@@ -126,7 +127,7 @@ h2{
 .top{
     display: flex;
     align-items: center;
-    padding-bottom: px;
+    padding-bottom: 10px;
 }
 
 .experience{
@@ -179,7 +180,6 @@ h2{
         margin: 0;
         width: auto;
         padding: 10px;
-
     }
 
     .education_details{
@@ -204,9 +204,22 @@ h2{
     }
 }
 
-@media only screen and (max-width: 975px){
+@media only screen and (max-width: 965px){
     *{
         font-size: 10px;
+    }
+    .personal_details table{
+        width: 100%;
+        height: auto;
+    }
+    .personal_details{
+        width: 60%;
+        height: 125px;
+        margin-left: 5px;
+        margin: 5px;
+    }
+    .personal_details td{
+        padding: 0px;
     }
     .main{
         margin: 5px;
@@ -219,13 +232,13 @@ h2{
         margin: 10px;
     }
     .photo{
-        width: 100%;
-        height: auto;
-        margin: 10px;
+        width: 25%;
+        height: 125px;
+        margin: 5px;
+        margin-right: 0px;
     }
     .photo img{
-        width: 20%;
-        border-radius: 10px;
+        width: 100px;
         height: auto;
     }
     .top h2{
@@ -237,17 +250,10 @@ h2{
         padding: 2px;
         padding-right: 10px;
         padding-left: 5px;
-        margin-bottom: 10px;
     }
-
-    .personal_details table{
-        width: 100%;
-    }
-
-    .personal_details{
-        width: 100%;
-        height: 160px;
-        margin: 10px;
+    .top{
+        display: flex;
+        align-items: center;
     }
 
     .skills{
@@ -286,5 +292,32 @@ h2{
     .sing{
         width: 80px;
         height: auto;
+    }
+}
+
+@media only screen and (max-width: 393px){
+    .photo{
+        width: 100%;
+        height: auto;
+        margin: 10px;
+    }
+
+    .photo img{
+        width: 30%;
+        border-radius: 10px;
+        height: auto;
+    }
+
+    .personal_details table{
+        width: 100%;
+    }
+
+    .personal_details{
+        width: 100%;
+        height: 160px;
+        margin: 10px;
+    }
+    .personal_details td{
+        padding: 0px;
     }
 }
