--- a/css/sytle.css
+++ b/css/sytle.css
@@ -243,16 +243,17 @@ h2{
     }
     .top h2{
         font-size: 10px;
+        margin: 0;
     }
     .top img{
         height: 20px;
         width: 20px;
         padding: 2px;
         padding-right: 10px;
-        padding-left: 5px;
     }
     .top{
         display: flex;
+        padding: 0;
         align-items: center;
     }
 
